# blumbotron

./: .editorconfig  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .versionrc.json  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  blumbo.db  drizzle.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  unfinished.html  viewer.html  vite.config.ts
.github/workflows/: build.yml  release.yml  verify-downloads.yml
docs/: changelog.html  documentation.html  index.html  rfid-guide.html
drizzle/: 0000_glorious_starbolt.sql  0000_medical_karma.sql  0000_neat_wong.sql  0000_robust_the_liberteens.sql  0000_wise_chronomancer.sql  0000_worried_mathemanic.sql  schema.ts
drizzle/meta/: 0000_snapshot.json  _journal.json
public/fonts/: fonts.css
public/themes/: cy-terminal.css  dark-gaming.css  example-theme.css  neural-net.css
scripts/: generate-changelog.cjs
src/: App.css  App.tsx  ViewerApp.tsx  viewer.tsx
src-tauri/: Cargo.toml  bump-cargo.cjs  tauri.conf.json
src-tauri/capabilities/: default.json  display-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx  blank.tsx  buttonColorPicker.tsx  chip.tsx  dialogContainer.tsx  dialogModal.tsx  displayFrame.tsx  displayListItem.tsx  displaySlide.tsx  displayTable.tsx  displayTableWrapper.tsx  formAlternateIds.tsx  formGame.tsx  formGameDisplayConfig.tsx  formGameLayout.tsx  formGameMechanics.tsx  formGameMedia.tsx  formGameStyles.tsx  formGameTableConfig.tsx  formPhoto.tsx  formPlayer.tsx  formRoster.tsx  (+36 more)
(+32 files in other folders)
