[package]
name = "blumbotron"
version = "0.1.0"
description = "A Tauri App"
authors = ["mjlemay"]
edition = "2021"

[lib]
name = "blumbotron_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }



