[package]
name = "blumbotron"
version = "0.1.0"
description = "A Tauri App"
authors = ["mjlemay"]
edition = "2021"

[lib]
name = "blumbotron_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.12", features = ["unstable"] }
tauri-plugin-shell = { version = "2.0.0-beta.12", features = [] }
tauri-plugin-sql = { version = "2.0.0-beta.12", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



